Fixed: - Projectjsx navbar squish problem(by removing the extra top-container) Added: -Category title and images -linear-gradient to act as a filter for category images

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   background-color: #e08738;
   background-image: url(./asset/arches.png);
   display: flex;
-  
+  height: 100vh;
 }
 /*-----------------------------Welcome---------------------- */
 
@@ -133,7 +133,7 @@ body {
   height: 100vh;
   width: 300px;
   background-color: #945116;
-  z-index: 9999;
+
 }
 
 .navigation-inner {
@@ -217,27 +217,59 @@ body {
 
 /* -----------------------my-work--------------- */
 
-.project-top-container{
+.project-wrapper{
   display: flex;
-  flex-direction: row;
-  overflow: hidden;
  height: 100vh;
+  flex: 6;
   
-
 }
 .category-item{
   flex: 1;
-  justify-content: flex-end;
+  position: relative;
 }
 
-.category-item img{
-  
-
- width: 100%;
- height: 100%;
+.category-image{
   object-fit: cover;
   object-position: center;
+  width:100%;
+  height: 100vh;
 }
+.category-item::before{
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgb(69,69,69);
+background: linear-gradient(0deg, rgba(69,69,69,1) 0%, rgba(135,135,135,0.7511379551820728) 34%, rgba(203,203,203,0.40940126050420167) 63%, rgba(255,255,255,0) 100%);
+  opacity: 0.3;
+}
+
+.ci1{
+  object-position: 80% 0%;
+}
+
+.ci2{
+  object-position:20% 0%;
+}
+
+.ci3{
+  object-position:30% 0%;
+}
+
+.category-item h2{
+  position: absolute;
+  display: flex;
+  bottom: 10%;
+  background-color: rgba(207, 207, 207, 0.739);
+  width: 100%;
+  height: 10%;
+  font-size: 2rem;
+  justify-content: center;
+
+  margin: 0;
+  padding: 20px;
+}
+
 /* 
 .category-title{
   position: absolute;
